--- a/frontend_end_user/src/components/Navbar/Navbar.css
+++ b/frontend_end_user/src/components/Navbar/Navbar.css
@@ -1,8 +1,8 @@
-/* src/components/Navbar/Navbar.css */
+/* Navbar styles for all screens */
 .navbar {
   background-color: #fff;
   color: #222;
-  padding: 1.5rem 1rem; /* Reduced padding */
+  padding: 1.5rem 1rem;
   position: fixed;
   top: 0;
   width: 100%;
@@ -15,11 +15,12 @@
   justify-content: space-between;
   align-items: center;
   max-width: 1200px;
-  margin: 0 auto;
+  margin: 10 auto;
+  padding: 0.2rem 2rem;
 }
 
 .navbar-brand img {
-  height: 40px; /* Reduced logo size */
+  height: 40px;
   animation: logoAnimation 1.5s ease-in-out;
 }
 
@@ -42,7 +43,7 @@
 }
 
 .nav-links li {
-  margin-left: 1.5rem; /* Reduced margin */
+  margin-left: 1.5rem;
 }
 
 .nav-links a {
@@ -61,9 +62,8 @@
   border-bottom: 2px solid #00bcd4;
 }
 
-/* Mobile Menu Styles */
 .menu-icon {
-  display: none; /* Hide by default on larger screens */
+  display: none;
   cursor: pointer;
 }
 
@@ -75,28 +75,28 @@
   transition: 0.4s;
 }
 
-/* Media Query for smaller screens */
 @media (max-width: 768px) {
   .menu-icon {
-    display: block; /* Show the hamburger menu icon on small screens */
+    display: block;
   }
 
   .nav-links {
     display: flex;
     flex-direction: column;
     position: absolute;
-    top: 70px; /* Adjust to be below navbar */
+    top: 70px;
     left: 0;
     width: 100%;
     background-color: #fff;
     box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
-    max-height: 0; /* Hide by default */
+    max-height: 0;
     overflow: hidden;
-    transition: max-height 0.3s ease; /* Add transition */
+    transition: max-height 0.3s ease-in-out;
+    z-index: 101;
   }
 
   .nav-links.show {
-    max-height: 500px; /* Adjust as needed */
+    max-height: 500px;
   }
 
   .nav-links li {
@@ -107,11 +107,31 @@
   .nav-links a {
     display: block;
     padding: 1rem;
-    text-align: center; /* Center text on mobile */
+    text-align: center;
   }
 
   .navbar .container {
     flex-direction: row;
     align-items: center;
+    padding: 1px;
+  }
+}
+
+@media (min-width: 769px) {
+  .nav-links {
+    flex-direction: row;
+    position: static;
+    max-height: none;
+    background-color: transparent;
+    box-shadow: none;
+  }
+
+  .nav-links li {
+    margin-left: 1.5rem;
+  }
+
+  .nav-links a {
+    padding: 0;
+    text-align: left;
   }
 }
