--- a/frontend_end_user/src/styles/LandingPage.css
+++ b/frontend_end_user/src/styles/LandingPage.css
@@ -9,8 +9,9 @@
     color: white;
     text-align: center;
     position: relative;
+    width: 350px;
     border-radius: 10px;
-    padding: 0 20px;
+    padding: 0 30px;
     overflow: hidden;
     padding-top: 70px; /* Adjust this value based on the height of your navbar */
 }
