--- a/frontend_end_user/src/styles/Footer.css
+++ b/frontend_end_user/src/styles/Footer.css
@@ -4,7 +4,7 @@
   color: #ffffff;
   padding: 50px 0;
   font-family: 'Poppins', sans-serif;
-  width: 400px;
+  width: 100%;
 }
 
 .footer-content {
@@ -105,6 +105,9 @@
 
 /* Responsiveness */
 @media (max-width: 768px) {
+  .footer {
+    width: 420px;
+  }
   .footer-content {
       flex-direction: column;
       align-items: center;
