--- a/frontend_end_user/src/styles/LandingPage.css
+++ b/frontend_end_user/src/styles/LandingPage.css
@@ -11,8 +11,7 @@
     position: relative;
     border-radius: 10px;
     padding: 0 30px;
-    overflow: hidden;
-    padding-top: 70px; /* Adjust this value based on the height of your navbar */
+    padding-top: 70px;
 }
 
 /* Overlay for Better Text Contrast */
