--- a/frontend_end_user/src/styles/Header.css
+++ b/frontend_end_user/src/styles/Header.css
@@ -47,7 +47,7 @@
   .header h1 {
     font-size: 2rem;
   }
-
+  
   .header-logo {
     width: 40px;
     height: 40px;
@@ -55,6 +55,10 @@
 }
 
 @media (max-width: 768px) {
+  .header{
+    width: 400px;
+  }
+
   .header h1 {
     font-size: 1.8rem;
   }
