--- a/frontend_restaurant_admin/src/styles/MenuSidebar.css
+++ b/frontend_restaurant_admin/src/styles/MenuSidebar.css
@@ -2,17 +2,17 @@
 .print-button {
   margin-top: 20px;
   padding: 10px 15px;
-  background-color: #28a745;
+  background-color: #4caf50;
   color: white;
   border: none;
   border-radius: 5px;
   cursor: pointer;
-  font-size: 16px;
 }
 
 .print-button:hover {
-  background-color: #218838;
+  background-color: #45a049;
 }
+
 
 .menu-sidebar {
   width: 50%;
