--- a/frontend_restaurant_admin/src/styles/ProcessingOrders.css
+++ b/frontend_restaurant_admin/src/styles/ProcessingOrders.css
@@ -1,12 +1,12 @@
 .orders-container {
     display: flex;
     width: 100%;
-    height: 100vh;
+    height: 100%;
     padding: 20px;
     gap: 20px;
     background-color: #eef2f5;
     box-sizing: border-box;
-    justify-content: center; /* Center vertically */
+    justify-content: center;
   }
 
  
